crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_run.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_run

trait Convert[a9] { convert(a9): b9 }
instance traits__multi_param_run.Convert[Int$$String] { convert=Convert$$Int$$String$$convert }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn tag(v0: Dict[traits__multi_param_run.Convert, d9, i9], v1: d9) -> i9 =
  let v2: i9 = trait_call traits__multi_param_run.Convert.convert(v0, v1)
  v2

fn main() -> Unit =
  let v4: Dict[traits__multi_param_run.Convert, Int, String] = get_dict traits__multi_param_run.Convert[Int, String]
  let v3: String = call tag(v4, 7)
  let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v6: Unit = call println(v5, v3)
  v6

fn Convert$$Int$$String$$convert(v7: Int) -> String =
  let v8: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v9: String = trait_call core/show.Show.show(v8, v7)
  let v10: String = concat_string("hello ", v9)
  v10
