crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_unique_pin.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_unique_pin

trait Convert[j8] { convert(j8): k8 }
instance traits__multi_param_unique_pin.Convert[Int$$String] { convert=Convert$$Int$$String$$convert }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn main() -> Unit =
  let v1: Dict[traits__multi_param_unique_pin.Convert, Int, String] = get_dict traits__multi_param_unique_pin.Convert[Int, String]
  let v0: String = trait_call traits__multi_param_unique_pin.Convert.convert(v1, 42)
  ()

fn Convert$$Int$$String$$convert(v2: Int) -> String =
  "n"
