crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_where.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_where

trait Convert[b11] { convert(b11): c11 }
instance traits__multi_param_where.Convert[Int$$String] { convert=Convert$$Int$$String$$convert }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn sugar(v0: Dict[traits__multi_param_where.Convert, e11, j11], v1: e11) -> j11 =
  let v2: j11 = trait_call traits__multi_param_where.Convert.convert(v0, v1)
  v2

fn explicit(v3: Dict[traits__multi_param_where.Convert, l11, q11], v4: l11) -> q11 =
  let v5: q11 = trait_call traits__multi_param_where.Convert.convert(v3, v4)
  v5

fn main() -> Unit =
  let v7: Dict[traits__multi_param_where.Convert, Int, String] = get_dict traits__multi_param_where.Convert[Int, String]
  let v6: String = call sugar(v7, 1)
  let v9: Dict[traits__multi_param_where.Convert, Int, String] = get_dict traits__multi_param_where.Convert[Int, String]
  let v8: String = call explicit(v9, 2)
  let v11: String = concat_string(v6, "-")
  let v12: String = concat_string(v11, v8)
  let v10: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v13: Unit = call println(v10, v12)
  v13

fn Convert$$Int$$String$$convert(v14: Int) -> String =
  let_join v18(v17: Bool) =
    if v17 {
      "sugar"
    } else {
      "explicit"
    }
  in
  let v15: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v16: Bool = trait_call core/eq.Eq.eq(v15, v14, 1)
  jump v18(v16)
